# deep-neural-network

./: .clang-format  .gitignore  ANN-idee.txt  CMakeLists.txt  Doxyfile  README.md  compile_commands.json  main.cpp
dataset/: gen_training_set.py  test_set.txt
dataset/slp-example/: test_set.txt
include/: ANN.h  ConcreteNeuron.h  Connection.h  DefaultLayer.h  DefaultLoader.h  DefaultNetwork.h  DefaultNeuron.h  DefaultTrainer.h  Layer.h  Loader.h  Network.h  Neuron.h  Trainer.h  Training.h
src/: ANN.cpp  Connection.cpp  Layer.cpp  Neuron.cpp  dnn.cpp
src/dnn/: ANN.cpp
test/: CMakeLists.txt  gen_training_set.py  test_AAA.cpp  test_CFG.cpp  test_ConcreteNeuron.cpp  test_DefaultLayer.cpp  test_DefaultNetwork.cpp  test_DefaultNeuron.cpp  test_DefaultTrainer.cpp  test_DefaultTrainer.txt  test_Trainer.cpp
